--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,27 @@
 * {
     background-color: #666;
+    padding: 0;
+    margin: 0;
+}
+
+.startGame {
+    width: 70%;
+    height: 70%;
+}
+
+#container {
+    width: 80vw;
+    height: 200px;
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid black;
+    justify-self: center;
+    margin: 20px 0 0 0;
+    align-items: center;
+}
+
+.gameChoice {
+    min-width: 100px;
+    height: 20%;
+    display: block;
 }
