--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,7 @@
 .startGame {
     width: 70%;
     height: 70%;
+    display: block;
 }
 
 #container {
@@ -23,5 +24,47 @@
 .gameChoice {
     min-width: 100px;
     height: 20%;
-    display: block;
+    display: none;
+}
+
+#text-container {
+    width: 80vw;
+    height: 200px;
+    display: none;
+    flex-direction: column;
+    justify-content: space-around;
+    border: 1px solid black;
+    justify-self: center;
+    margin: 20px 0 0 0;
+}
+
+.scores {
+    display: flex;
+    /* justify-content: space-around; */
+    /* justify-content: space-between; */
+    justify-content: space-evenly;
+    justify-self: center;
+}
+
+.player, .computer {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 30%;
+    font-size: 16px;
+    border: 1px solid black;
+}
+
+.playerScoreValue, .computerScoreValue {
+    font-size: 32px;
+}
+
+.results {
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    align-items: center;
+    font-size: 20px;
+    width: 80%;
 }
