--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,11 @@
+:root {
+    --mainColor: #264653;
+    --secondaryColor: #2a9d8f;
+    --turtiaryColor: #e9c46a;
+}
+
 * {
-    background-color: #666;
+    background-color: var(--mainColor);
     padding: 0;
     margin: 0;
 }
@@ -8,6 +14,9 @@
     width: 70%;
     height: 70%;
     display: block;
+    background-color: var(--secondaryColor);
+    border-radius: 8px;
+    font-size: 32px;
 }
 
 #container {
@@ -16,15 +25,19 @@
     display: flex;
     justify-content: space-around;
     border: 1px solid black;
+    border-radius: 12px;
     justify-self: center;
     margin: 20px 0 0 0;
     align-items: center;
+    background-color: var(--turtiaryColor);
 }
 
 .gameChoice {
     min-width: 100px;
     height: 20%;
     display: none;
+    background-color: var(--secondaryColor);
+    border-radius: 8px;
 }
 
 #text-container {
@@ -36,12 +49,15 @@
     border: 1px solid black;
     justify-self: center;
     margin: 20px 0 0 0;
+    background-color: var(--turtiaryColor);
+    border-radius: 12px;
 }
 
 .scores {
     display: flex;
     justify-content: space-evenly;
     justify-self: center;
+    background-color: var(--turtiaryColor);
 }
 
 .player, .computer {
@@ -51,10 +67,27 @@
     width: 30%;
     font-size: 16px;
     border: 1px solid black;
+    background-color: var(--secondaryColor);
+    border-radius: 8px;
+}
+
+.playerScore,
+.computerScore,
+.resultText,
+.result {
+    background-color: var(--secondaryColor);
+}
+
+.gameOver,
+.gameOver > h1,
+#gameOverText,
+#ties {
+    background-color: var(--turtiaryColor);
 }
 
 .playerScoreValue, .computerScoreValue {
     font-size: 32px;
+    background-color: var(--secondaryColor);
 }
 
 .results {
@@ -65,7 +98,10 @@
     align-items: center;
     font-size: 20px;
     width: 80%;
+    background-color: var(--secondaryColor);
+    border-radius: 8px;
 }
+
 
 #gameOver {
     display: none;
@@ -77,6 +113,7 @@
     justify-self: center;
     margin: 20px 0 0 0;
     border: 1px solid black;
+    border-radius: 12px;
 }
 
 #gameOver > h1, p {
@@ -85,4 +122,45 @@
 
 .restart {
     width: 20%;
+}
+
+#restart {
+    background-color: var(--secondaryColor);
+    border-radius: 4px;
+}
+
+#winsAndLosses {
+    display: flex;
+    width: 80vw;
+    height: 32px;
+    border: 1px solid black;
+    justify-self: center;
+    margin-top: 20px;
+    align-items: center;
+    background-color: var(--turtiaryColor);
+    border-radius: 4px;
+}
+
+#wins {
+    margin-right: auto;
+    margin-left: 16px;
+    display: flex;
+    background-color: var(--turtiaryColor);
+}
+
+#losses {
+    margin-left: auto;
+    margin-right: 16px;
+    display: flex;
+    background-color: var(--turtiaryColor);
+}
+
+#wins > p {
+    padding-left: 4px;
+    background-color: var(--turtiaryColor);
+}
+
+#losses > p {
+    padding-right: 4px;
+    background-color: var(--turtiaryColor);
 }
